# pyflowdiagnostics

./: .buildinfo  .gitignore  LICENSE  MANIFEST.in  Makefile  README.md  environment.yml  flow_diagnostics.py  genindex.html  grid.py  index.html  objects.inv  py-modindex.html  pyfd_cli.py  pyproject.toml  search.html  searchindex.js  well.py
.github/workflows/: testanddeploy.yml
_modules/: index.html
_modules/pyflowdiagnostics/: flow_diagnostics.html  grid.html  well.html
_sources/api/: flow_diagnostics.rst.txt  grid.rst.txt  index.rst.txt  pyflowdiagnostics.flow_diagnostics.FlowDiagnostics.rst.txt  pyflowdiagnostics.flow_diagnostics.SimulatorType.rst.txt  pyflowdiagnostics.grid.Grid.rst.txt  pyflowdiagnostics.readers.ecl_bin_reader.EclReader.rst.txt  pyflowdiagnostics.well.Completion.rst.txt  pyflowdiagnostics.well.Well.rst.txt  (+1 more)
api/: flow_diagnostics.html  grid.html  index.html  pyflowdiagnostics.flow_diagnostics.FlowDiagnostics.html  pyflowdiagnostics.flow_diagnostics.SimulatorType.html  pyflowdiagnostics.grid.Grid.html  pyflowdiagnostics.readers.ecl_bin_reader.EclReader.html  pyflowdiagnostics.well.Completion.html  pyflowdiagnostics.well.Well.html  readers.html  well.html
docs/: Makefile  conf.py  index.rst
manual/: about.html  index.html  installation.html  license.html  references.html  status.html  usage.html
pyflowDS/: __init__.py  __main__.py  flow_diagnostics.py  grid.py  utils.py
pyflowdiagnostics/: __main__.py  flow_diagnostics.py
tests/: get_data.py  test_regression.py
utils/: cmg_bin_reader.py  ecl_bin_reader.py  sr3_reader.py
(+421 files in other folders)
